// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationItemTitleDisplayVanilla should render correctly 1`] = `
<div
  className=""
>
  <Styled(Image)
    alt="Pickup"
    height="37px"
    src="/static/images/marker-icon.svg"
    width="30px"
  />
  <Styled(Image)
    alt="Shipping"
    height="37px"
    src="/static/images/fast-shipping.svg"
    width="40px"
  />
  <div
    className="confirmation-fullfillment-type"
  >
    <div>
      <Styled(BodyCopy)
        className={null}
        color="text.primary"
        component="span"
        fontFamily="secondary"
        fontSize="fs22"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="center"
      >
        <Styled(BodyCopy)
          className="elem-ml-XS"
          color="text.primary"
          component="span"
          fontFamily="primary"
          fontSize={12}
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          name
        </Styled(BodyCopy)>
      </Styled(BodyCopy)>
      <span>
        <Styled(Anchor)
          asPath="/"
          className="confirmation-fullfillment-store elem-ml-XS"
          title="union"
          to="/"
        >
          union
        </Styled(Anchor)>
      </span>
    </div>
    <div
      className="confirmation-fullfillment-details"
    >
      <Styled(ReactTooltip)
        aligned="right"
        fontFamily="secondary"
        message={
          <ForwardRef(Styled(BodyCopy))
            className={null}
            color="text.primary"
            component="p"
            fontFamily="secondary"
            fontSize="fs14"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="center"
          >
            1123 ab
            <br />
            adf
            <br />
            AC
            , 
            AD
             
            10001
            <br />
            <br />
            <em />
            
            <br />
            <em />
            
            <br />
            <em />
            23456789023
          </ForwardRef(Styled(BodyCopy))>
        }
      >
        <Styled(Image)
          height="20"
          src="/static/images/info-icon.png"
          width="20"
        />
      </Styled(ReactTooltip)>
    </div>
  </div>
</div>
`;

exports[`ConfirmationItemTitleDisplayVanilla should render correctly without shipping full name 1`] = `
<div
  className=""
>
  <Styled(Image)
    alt="Pickup"
    height="37px"
    src="/static/images/marker-icon.svg"
    width="30px"
  />
  <div
    className="confirmation-fullfillment-type"
  >
    <div>
      <Styled(BodyCopy)
        className={null}
        color="text.primary"
        component="span"
        fontFamily="secondary"
        fontSize="fs22"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="center"
      />
      <span>
        <Styled(Anchor)
          asPath="/"
          className="confirmation-fullfillment-store elem-ml-XS"
          title="union"
          to="/"
        >
          union
        </Styled(Anchor)>
      </span>
    </div>
    <div
      className="confirmation-fullfillment-details"
    >
      <Styled(ReactTooltip)
        aligned="right"
        fontFamily="secondary"
        message=""
      >
        <Styled(Image)
          height="20"
          src="/static/images/info-icon.png"
          width="20"
        />
      </Styled(ReactTooltip)>
    </div>
  </div>
</div>
`;

exports[`ConfirmationItemTitleDisplayVanilla should render null if center is not present 1`] = `""`;
